--- a/trunk/trunk/Framework/Builder/.classpath
+++ b/trunk/trunk/Framework/Builder/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ANT"/>
 	<classpathentry kind="lib" path="lib/dom4j-2.0.0-ALPHA-2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SwfExport"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PsdParser"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
