--- a/trunk/Framework/Builder/build.xml
+++ b/trunk/Framework/Builder/build.xml
@@ -13,7 +13,9 @@
 	<property name="file.proj" value="${dir.content}/GameContent.contentproj" />
 	<property name="file.code" value="../Game/Game/app/Res.cs" />
 	
-	<property name="dir.swf" value="D:\dev\java\workspaces\foospace\foo-utils\SwfExport"/> <!-- Fix me!!! -->
+	<property name="dir.utils" value="D:\dev\java\workspaces\foospace\foo-utils"/> <!--Fix me!!!-->
+	<property name="dir.psd" value="${dir.utils}\PsdParser"/>
+	<property name="dir.swf" value="${dir.utils}\SwfExport"/>
 	
 	<path id="libs">
 		<fileset dir="${dir.lib}">
@@ -29,35 +31,53 @@
 		<delete dir="${dir.restmp}" />
 	</target>
 	
-	<target name="build">
-		
-		<ant antfile="${dir.swf}/build.xml" target="build-classes" dir="${dir.swf}">
+	<target name="build-classes">
+		<ant antfile="${dir.ext}/build.xml" target="build-classes" dir="${dir.ext}">
 			<property name="dir.output" value="${basedir}/${dir.classes}" />
 		</ant>
+	</target>
+	
+	<target name="build">
+		<!-- Build externals -->
+		<antcall target="build-classes">
+			<param name="dir.ext" value="${dir.psd}"/>
+		</antcall>
+		<antcall target="build-classes">
+			<param name="dir.ext" value="${dir.swf}"/>
+		</antcall>
 		
+		<!-- Build project -->
 		<mkdir dir="${dir.classes}"/>
 		<javac destdir="${dir.classes}" debug="true" encoding="UTF-8">
 		  	<src path="${dir.source}" /> 
 			<classpath refid="libs"/>
 		</javac>
+		
+		<!-- Content task -->
 		<taskdef name="content" classname="tasks.ContentProjTask">
 			<classpath path="${dir.classes}"/>
 			<classpath refid="libs"/>
 		</taskdef>
+		
+		<!-- Res output -->
 		<mkdir dir="${dir.restmp}"/>
 	</target>
 	
 	<target name="run" depends="build">		
 		<content projFile="${file.proj}" codeFile="${file.code}" resTemp="${dir.restmp}">			
 			<package name="PACK_COMMON">
-				<!--<atlas name="common">-->
+				<atlas name="common">
 					<image name="ui_button_a" file="${dir.gfx}/buttonA.png" />
 					<image name="ui_button_b" file="${dir.gfx}/buttonB.png" />
-				<!--</atlas>-->				
+					<font name="test" file="${dir.gfx}/font_test.font" />
+				</atlas>				
 			</package>
 			
 			<package name="PACK_MENU">
-				<anim name="swf_test" file="${dir.gfx}/test.swf" />							    
+				<anim name="anim" file="${dir.gfx}/test.swf" />							    
+				<image name="ui_button_a2" file="${dir.gfx}/buttonA.png" />
+				<image name="ui_button_b2" file="${dir.gfx}/buttonB.png" />
+				<image name="duck_dead" file="${dir.gfx}/duck_dead.png" />				
 			</package>
 		</content>
 	</target>
