--- a/trunk/trunk/Framework/AsapXna/AsapXna.csproj
+++ b/trunk/trunk/Framework/AsapXna/AsapXna.csproj
@@ -122,6 +122,10 @@
     <Compile Include="asap\graphics\GameEffect.cs" />
     <Compile Include="asap\resources\EmbededRes.cs" />
     <Compile Include="asap\resources\types\AtlasRes.cs" />
+    <Compile Include="asap\sound\ISoundChannel.cs" />
+    <Compile Include="asap\sound\MusicChannel.cs" />
+    <Compile Include="asap\sound\SoundChannel.cs" />
+    <Compile Include="asap\sound\SoundTransform.cs" />
     <Compile Include="asap\util\Color4.cs" />
     <Compile Include="asap\util\ColorTransform.cs" />
     <Compile Include="asap\visual\BaseAnimation.cs" />
@@ -143,19 +147,19 @@
     <Compile Include="asap\resources\readers\BitmapFontReader.cs" />
     <Compile Include="asap\resources\types\BaseSound.cs" />
     <Compile Include="asap\resources\ManagedResource.cs" />
-    <Compile Include="asap\resources\types\Music.cs" />
+    <Compile Include="asap\resources\types\GameMusic.cs" />
     <Compile Include="asap\resources\ResCallback.cs" />
     <Compile Include="asap\resources\ResFactory.cs" />
     <Compile Include="asap\resources\ResourceMgr.cs" />
     <Compile Include="asap\resources\ResourceLoadInfo.cs" />
     <Compile Include="asap\resources\ResourceMgrListener.cs" />
     <Compile Include="asap\resources\ResType.cs" />
-    <Compile Include="asap\resources\types\Sound.cs" />
+    <Compile Include="asap\resources\types\GameSound.cs" />
     <Compile Include="asap\resources\StringsPack.cs" />
     <Compile Include="asap\resources\readers\StringsPackReader.cs" />
     <Compile Include="asap\resources\types\StrRes.cs" />
     <Compile Include="asap\rms\RecordStorage.cs" />
-    <Compile Include="asap\sound\SoundManager.cs" />
+    <Compile Include="asap\sound\SoundMgr.cs" />
     <Compile Include="asap\ui\Focusable.cs" />
     <Compile Include="asap\ui\FocusListener.cs" />
     <Compile Include="asap\ui\FocusType.cs" />
